fixed compiler warnings